<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/dialog_custom.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg_round_white"
    android:elevation="6dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:padding="24dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SD"
        android:layout_gravity="center"
        android:textColor="@color/black"
        style="@style/text_roboto_R"
        />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_hd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HD"
            android:layout_gravity="center"
            android:textColor="@color/black"
            style="@style/text_roboto_R"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fhd"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FHD"
            android:layout_gravity="center"
            android:textColor="@color/black"
            style="@style/text_roboto_R"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_fhd2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FHD2"
            android:layout_gravity="center"
            android:textColor="@color/black"
            style="@style/text_roboto_R"
            />
    </androidx.cardview.widget.CardView>


    </LinearLayout>
    </RelativeLayout>