<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.fragment.ingredient.IngredientFragment">



        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_info"
            style="@style/text_roboto_R1"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredient_info_detail"
            android:layout_marginTop="6dp"
            style="@style/text_roboto_R3"
            android:textColor="@color/gray"
            />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_layout"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                style="@style/input_box_edit"
                android:hint="@string/search_text"
                android:drawableRight="@drawable/ic_search"
                />


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_roboto_R2"
                    android:textColor="@color/black"
                    android:text="의약품"/>
                <RadioButton
                    android:id="@+id/medicine_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/text_roboto_R2"
                    android:textColor="@color/black"
                    android:text="의약외품"/>

                <RadioButton
                    android:id="@+id/medicine_non_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>


        </LinearLayout>



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="16dp"
        app:strokeColor="@color/border_color"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/search_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_medicine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        <TextView
            android:id="@+id/tv_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_roboto_R2"
            android:textColor="@color/gray"
            android:gravity="center"
            android:text="@string/ingredient_search_empty"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                /> <!-- 초기에는 숨겨져 있도록 설정 -->



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>
